tests/ui/fail/empty_call.stderr
error: Unexpected end of macro invocation
 --> tests/ui/fail/empty_call.rs:3:1
  |
3 | #[expandable::expandable(expr)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `expandable::expandable` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused macro definition: `empty`
 --> tests/ui/fail/empty_call.rs:4:14
  |
4 | macro_rules! empty {
  |              ^^^^^
  |
  = note: `#[warn(unused_macros)]` on by default
